Minor changes for final version.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/spdep2@129 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/INLABMA/inst/not_a_vignette/biblio.bib
+++ b/INLABMA/inst/not_a_vignette/biblio.bib
@@ -16,7 +16,7 @@ abstract = {Summary.  We analyse decisions to reopen in the aftermath of Hurrica
    author={James {LeSage} and Robert Kelley Pace},
    title={Introduction to Spatial Econometrics},
    year={2009},
-   publisher={Chapman and Hall/CRC}
+   publisher={Chapman and Hall/CRC, Boca Raton}
 
 }
 
@@ -33,28 +33,21 @@ abstract = {Summary.  We analyse decisions to reopen in the aftermath of Hurrica
 
 @article{Hoetingetal:1999,
    author={Jennifer Hoeting and David Madigan and, Adrian Raftery and Chris Volinsky},
-   title={Bayesian Model Averaging: A Tutorial},
+   title={Bayesian Model Averaging: A Tutorial (with Discussion)},
    year={1999},
    journal={Statistical Science},
    volume={14},
+   number={4},
    pages={382-401}
 }
 
-
-@article{PaceGilley:1997,
-   author = {Pace, R. Kelley and O.W. Gilley},
-   title={Using the Spatial Configuration of the Data to Improve Estimation},
-   journal={Journal of the Real Estate Finance and Economics},
-   volume={14},
-   year={1997},
-   pages={333-340}
-}
 
 @article{HarrisonRubinfeld:1978,
    author={Harrison, David and Daniel L. Rubinfeld},
    title={Hedonic Housing Prices and the Demand for Clean Air}, 
    journal={Journal of Environmental Economics and Management},
    volume={5}, 
+   number={1},
    year={1978},
    pages={81-102}
 }
@@ -87,7 +80,8 @@ abstract = {Summary.  We analyse decisions to reopen in the aftermath of Hurrica
      Clinical Trials},
    editor={ Halloran, M and Berry, D},
    pages={135-178},
-   publisher={Springer-Verlag, New York}
+   publisher={Springer-Verlag},
+   address={New York}
 }
 
 @incollection{GomezRubioetal:2013,
@@ -97,7 +91,8 @@ abstract = {Summary.  We analyse decisions to reopen in the aftermath of Hurrica
    booktitle={Handbook of Regional Science},
    editor={Manfred M. Fischer and Peter Nijkamp},
    pages={1401--1417},
-   publisher={Springer-Verlag, New York}
+   publisher={Springer-Verlag},
+   address={New York}
 }
 
 
@@ -106,17 +101,19 @@ abstract = {Summary.  We analyse decisions to reopen in the aftermath of Hurrica
    title={Approximate Bayesian Inference for Spatial Econometrics Models},
    year={2014},
    journal ={Spatial Statistics},
-   pages={To appear}
+   volume={9},
+   pages={146--165}
 }
 
 @InCollection{	  isi:000284021400008,
   author	= {Martino, Sara and Rue, Havard},
   editor	= {{Mantovan, P and Secchi, P}},
-  title		= {{Case studies in Bayesian computation using INLA}},
-  booktitle	= {{COMPLEX DATA MODELING AND COMPUTATIONALLY INTENSIVE
-		  STATISTICAL METHODS}},
+  title		= {{Case Studies in Bayesian Computation Using INLA}},
+  booktitle	= {Complex Data Modeling and Computationally Intensive
+		  Statistical Methods},
   series	= {{Contributions to Statistics}},
   publisher	= {Springer-Verlag},
+  address       = {New York},
   year		= {{2010}},
   pages		= {{99-114}},
   abstract	= {{Latent Gaussian models are a common construct in
@@ -140,8 +137,6 @@ abstract = {Summary.  We analyse decisions to reopen in the aftermath of Hurrica
 		  and user-friendly. It is meant to, hopefully, make latent
 		  Gaussian models applicable, useful and appealing for a
 		  larger class of users.}},
-  issn		= {{1431-1968}},
-  isbn		= {{978-88-470-1385-8}},
   unique-id	= {{ISI:000284021400008}}
 }
 
@@ -207,9 +202,9 @@ abstract = {Summary.  We analyse decisions to reopen in the aftermath of Hurrica
 @Article{	  isi:000288017300007,
   author	= {Schr\"odle, Birgit and Held, Leonhard and Riebler, Andrea
 		  and Danuser, Juerg},
-  title		= {{Using integrated nested Laplace approximations for the
-		  evaluation of veterinary surveillance data from
-		  Switzerland: a case-study}},
+  title		= {{Using Integrated Nested Laplace Approximations for the
+		  Evaluation of Veterinary Surveillance Data from
+		  Switzerland: a Case-Study}},
   journal	= {Journal of the Royal Statistical Society C}, 
   year		= {{2011}},
   volume	= {{60}},
@@ -237,7 +232,6 @@ abstract = {Summary.  We analyse decisions to reopen in the aftermath of Hurrica
 		  usability of both approaches in practice is conducted.
 		  Approaches to model choice using integrated nested Laplace
 		  approximations are also presented.}},
-  issn		= {{0035-9254}},
   unique-id	= {{ISI:000288017300007}}
 }
 
@@ -318,7 +312,6 @@ abstract = {Summary.  We analyse decisions to reopen in the aftermath of Hurrica
 		  model comparison criteria and various predictive measures
 		  so that models can be compared and the model under study
 		  can be challenged.}},
-  issn		= {{1369-7412}},
   unique-id	= {{ISI:000264374200002}}
 }
 
@@ -606,7 +599,7 @@ abstract = {Summary.  We analyse decisions to reopen in the aftermath of Hurrica
   author	= {N. A. C. Cressie},
   title		= {Statistics for Spatial Data},
   year		= {1993},
-  publisher	= {Wiley},
+  publisher	= {John Wiley \& Sons},
   address       = {New York}
 }
 
@@ -659,7 +652,7 @@ abstract = {Summary.  We analyse decisions to reopen in the aftermath of Hurrica
 
 @Book{		  diggleribeiro:2007,
   author	= {P.J. Diggle and Paulo Justiniano Ribeiro},
-  title		= {Model-based Geostatistics},
+  title		= {Model-Based Geostatistics},
   year		= {2007},
   publisher	= {Springer-Verlag},
   address       = {New York}
@@ -734,7 +727,7 @@ abstract = {Summary.  We analyse decisions to reopen in the aftermath of Hurrica
 
 @article{Camelettietal:2013,
    author ={Cameletti, M. and Lindgren, F. and Simpson, D. and Rue, H.},
-   title={Spatio-temporal Modeling of Particulate Matter Concentration through the SPDE Approach},
+   title={Spatio-Temporal Modeling of Particulate Matter Concentration through the SPDE Approach},
    journal={Advances in Statistical Analysis},
    year={2013},
    volume={97},
@@ -975,9 +968,9 @@ Unique-ID = {{ISI:000247993500013}},
 }
 @article{ ISI:000286716000024,
 Author = {Hosseini, Fatemeh and Eidsvik, Jo and Mohammadzadeh, Mohsen},
-Title = {{Approximate Bayesian inference in spatial GLMM with skew normal latent
-   variables}},
-Journal = {{COMPUTATIONAL STATISTICS \& DATA ANALYSIS}},
+Title = {{Approximate Bayesian Inference in Spatial GLMM with Skew Normal Latent
+   Variables}},
+Journal = {Computational Statistics \& Data Analysis},
 Year = {{2011}},
 Volume = {{55}},
 Number = {{4}},
@@ -1883,7 +1876,7 @@ title = {Approximate cross-validatory predictive checks in disease mapping model
 journal = {Statistics in Medicine},
 volume = {22},
 number = {10},
-publisher = {John Wiley & Sons, Ltd.},
+publisher = {John Wiley \& Sons},
 issn = {1097-0258},
 url = {http://dx.doi.org/10.1002/sim.1403},
 doi = {10.1002/sim.1403},
@@ -2040,7 +2033,8 @@ S\o{}rbye and H\r{a}vard Rue},
 @book{FahrmeirKneib:2011,
    author={Ludwig Fahrmeir and Thomas Kneib},
    title={Bayesian Smoothing and Regression for Longitudinal. Spatial and Event History Data},
-   publisher={Oxford University Press, New York},
+   publisher={Oxford University Press},
+   address={New York},
    year={2011}
 }
 
@@ -2081,8 +2075,8 @@ S\o{}rbye and H\r{a}vard Rue},
    year={2013},
    journal={Journal of the Royal Statistical Society C},
    volume ={62},
-   number ={5},
-   pages={}
+   number ={4},
+   pages={593--608}
 }
 
 
@@ -2105,9 +2099,8 @@ S\o{}rbye and H\r{a}vard Rue},
 
 @article{Blangiardoetal:2013,
 title = "Spatial and Spatio-Temporal Models with \pkg{R-INLA} ",
-journal = "Spatial and Spatio-temporal Epidemiology ",
+journal = "Spatial and Spatio-Temporal Epidemiology ",
 volume = "4",
-number = "0",
 pages = "33 - 49",
 year = "2013",
 note = "",
@@ -2131,16 +2124,12 @@ author = "Marta Blangiardo and Michela Cameletti and Gianluca Baio and Håvard R
     number = {6},
     pages = {1--42},
     year = {2005},
-    note = {{ISSN} 1548-7660},
     url = {www.jstatsoft.org},
   }
 
-Paulo J. Ribeiro Jr & Peter J. Diggle geoR: a package for
-  geostatistical analysis R-NEWS, 1(2):15-18. June, 2001
-
 
   @Article{geoR:2001,
-    title = {\pkg{geoR}: a Package for Geostatistical Analysis},
+    title = {\pkg{geoR}: A Package for Geostatistical Analysis},
     author = {Paulo J. {Ribeiro} and Peter J. Diggle},
     journal = {R-NEWS},
     year = {2001},
@@ -2166,9 +2155,10 @@ Paulo J. Ribeiro Jr & Peter J. Diggle geoR: a package for
 @article{Ruiz-Cardenasetal:2012,
    author={Ruiz-Cardenas, R. and E.T. Krainski and H. Rue},
    year={2012},
-   title={Direct fitting of dynamic models using integrated nested Laplace approximations -- INLA},
+   title={Direct Fitting of Dynamic Models Using Integrated Nested Laplace Approximations -- INLA},
    journal={Computational Statistics and Data Analysis},
    volume={56}, 
+   number={6},
    pages={1808-1828}
 }
 
@@ -2176,37 +2166,40 @@ Paulo J. Ribeiro Jr & Peter J. Diggle geoR: a package for
 @article{SchrodleHeld:2011,
    author={Schr\"odle, B. and L. Held},
    year={2011},
-   title={Spatio-temporal disease mapping using INLA},
+   title={Spatio-Temporal Disease Mapping Using INLA},
    journal={Environmetrics},
    volume={22},
+   number={6},
    pages={725--734}
 }
 
 @article{Eidsviketal:2012,
    author={Eidsvik, J. and  A.O. Finley and S. Banerjee and H. Rue},
    year={2012},
-   title={Approximate Bayesian inference for large spatial datasets using predictive process models},
+   title={Approximate Bayesian Inference for Large Spatial Datasets Using Predictive Process Models},
    journal={Computational Statistics and Data Analysis},
    volume={56},
+   number={6},
    pages={1362--1380}
 }
 
 @article{SchrodleHeld:2010,
    author={Schr\"odle, B. and Held, L.},
    year={2010},
-   title={A primer on disease mapping and ecological regression using {INLA}},
+   title={A Primer on Disease Mapping and Ecological Regression Using {INLA}},
    journal={Computational Statistics},
    volume={26},
+  number={2},
    pages={241--258}
 }
 
 @article{HossainLawson:2009,
    author={Hossain, M. M. and Lawson, A. B.},
    year={2009},
-   title={Approximate methods in Bayesian point process spatial models},
+   title={Approximate Methods in Bayesian Point Process Spatial Models},
    journal={Computational Statistics and Data Analysis},
    volume={53},
-   issue={8}, 
+   number={8}, 
    pages={2831--2842}
 }
 
@@ -2215,6 +2208,7 @@ Paulo J. Ribeiro Jr & Peter J. Diggle geoR: a package for
    title={Using the Spatial Configuration of the Data to Improve Estimation},
    journal={Journal of the Real Estate Finance and Economics},
    volume={14},
+   number={3},
    year={1997},
    pages={333--340}
 }
@@ -2223,12 +2217,13 @@ Paulo J. Ribeiro Jr & Peter J. Diggle geoR: a package for
    author={Wood, S.N.},
    year={2006},
    title={Generalized Additive Models: An Introduction with  \proglang{R}},
-   publisher={Chapman and Hall/CRC}
+   publisher={Chapman and Hall/CRC},
+   address={Boca Raton}
 }
 
 @Article{KahleWickham:2013,
   author       = { David Kahle and Hadley Wickham },
-  title        = { ggmap : Spatial Visualization with ggplot2 },
+  title        = {\pkg{ggmap}: Spatial Visualization with \pkg{ggplot2} },
   journal      = { The R Journal },
   year         = { 2013 },
   volume       = { 5 },
@@ -2240,10 +2235,10 @@ Paulo J. Ribeiro Jr & Peter J. Diggle geoR: a package for
 
 @Book{Wickham:2009,
     author = {Hadley Wickham},
-    title = {ggplot2: elegant graphics for data analysis},
-    publisher = {Springer New York},
+    title = {\pkg{ggplot2}: Elegant Graphics for Data Analysis},
+    publisher = {Springer-Verlag},
+    address = {New York},
     year = {2009},
-    isbn = {978-0-387-98140-6},
     url = {http://had.co.nz/ggplot2/book},
   }
 
@@ -2251,8 +2246,10 @@ Paulo J. Ribeiro Jr & Peter J. Diggle geoR: a package for
 @book{Bivandetal:2013,
    author={Roger S. Bivand and Edzer Pebesma and Virgilio G\'omez-Rubio},
    title={Applied Spatial Data Analysis with \proglang{R}},
+   edition={2nd},
    year={2013},
-   publisher={Springer-Verlag, New York}
+   publisher={Springer-Verlag},
+   address={New York}
 }
 
 @article{Brezgeretal:2005,
