Minor changes in final version.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/spdep2@130 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/INLABMA/inst/not_a_vignette/biblio.bib
+++ b/INLABMA/inst/not_a_vignette/biblio.bib
@@ -807,6 +807,7 @@ S\o{}rbye and H\r{a}vard Rue},
     abstract = {{Are there geographic clusters of disease cases, or hotspots of crime? Can the geography of air quality be matched to where people hospitalized for respiratory complaints actually live? Spatial data is data about the world where the attribute of interest and its location on the earth's surface are recorded. This comprehensive overview of the subject shows how the above questions can be tackled.  It is written for students and researchers in geography, economics, social science, the environmental sciences and statistics.}},
     author = {Haining, Robert},
     publisher = {Cambridge University Press},
+    address = {Cambridge},
     title = {{Spatial Data Analysis: Theory and Practice}},
     year = {2003}
 }
