--- a/INLABMA/inst/not_a_vignette/biblio.bib
+++ b/INLABMA/inst/not_a_vignette/biblio.bib
@@ -1,6 +1,6 @@
 
 @article{LeSageetal:2011,
-author = {LeSage, James P. and Kelley Pace, R. and Lam, Nina and Campanella, Richard and Liu, Xingjian},
+author = {LeSage, James P. and Pace, R. Kelley and Lam, Nina and Campanella, Richard and Liu, Xingjian},
 title = {New Orleans Business Recovery in the Aftermath of Hurricane Katrina},
 journal = {Journal of the Royal Statistical Society A},
 volume = {174},
@@ -32,7 +32,7 @@ abstract = {Summary.  We analyse decisions to reopen in the aftermath of Hurrica
 
 
 @article{Hoetingetal:1999,
-   author={Jennifer Hoeting and David Madigan and, Adrian Raftery and Chris Volinsky},
+   author={Jennifer Hoeting and David Madigan and Adrian Raftery and Chris Volinsky},
    title={Bayesian Model Averaging: A Tutorial (with Discussion)},
    year={1999},
    journal={Statistical Science},
@@ -204,7 +204,7 @@ abstract = {Summary.  We analyse decisions to reopen in the aftermath of Hurrica
 		  and Danuser, Juerg},
   title		= {{Using Integrated Nested Laplace Approximations for the
 		  Evaluation of Veterinary Surveillance Data from
-		  Switzerland: a Case-Study}},
+		  Switzerland: A Case-Study}},
   journal	= {Journal of the Royal Statistical Society C}, 
   year		= {{2011}},
   volume	= {{60}},
@@ -613,7 +613,7 @@ abstract = {Summary.  We analyse decisions to reopen in the aftermath of Hurrica
 }
 
 @Article{	  besagetal:1991,
-  author	= {Besag, J. and York, J. and Mollie, A.},
+  author	= {Besag, J. and York, J. and Molli\'e, A.},
   title		= {Bayesian Image Restoration, with Two Applications in
 		  Spatial Statistics},
   year		= {1991},
